--- a/public/workshop/rct-evaluation-in-r/vorbereitung/index.html
+++ b/public/workshop/rct-evaluation-in-r/vorbereitung/index.html
@@ -804,7 +804,6 @@ code{
 .hljs{
   font-size: 16px
 }
-
 </style>
 <h2 id="flexibility">Flexibility</h2>
 <p>Document everything!</p>
@@ -968,7 +967,7 @@ jitter2 <span style="color:#333">=</span> <span style="color:#06b;font-weight:bo
         </div>
 
         <div class="body-footer">
-          <p>Zuletzt aktualisiert am 1. Januar 0001</p>
+          <p>Zuletzt aktualisiert am 0001-01-01</p>
 
           
 
