--- a/public/workshop/rct-evaluation-in-r/r-entdecken/index.html
+++ b/public/workshop/rct-evaluation-in-r/r-entdecken/index.html
@@ -969,7 +969,7 @@ jitter2 <span style="color:#333">=</span> <span style="color:#06b;font-weight:bo
         </div>
 
         <div class="body-footer">
-          <p>Zuletzt aktualisiert am 1. Januar 0001</p>
+          <p>Zuletzt aktualisiert am 0001-01-01</p>
 
           
 
