--- a/public/workshop/rct-evaluation-in-r/programm/index.html
+++ b/public/workshop/rct-evaluation-in-r/programm/index.html
@@ -924,7 +924,11 @@
         <li><a href="#" id="back_to_top" class="docs-toc-title">Auf dieser Seite</a></li>
       </ul>
 
-      <nav id="TableOfContents"></nav>
+      <nav id="TableOfContents">
+  <ul>
+    <li><a href="#foliensatz">Foliensatz</a></li>
+  </ul>
+</nav>
 
       
     </div>
@@ -947,9 +951,47 @@ code{
 .hljs{
   font-size: 16px
 }
-h1 {color: #2a7792;}
+.minih{
+  font-size: 1px;
+  margin: 0px 0px 0px 0px;
+}
+
+.highlight {
+    position: relative;
+}
+.highlight pre {
+    padding: 15px;
+}
+.highlight-copy-btn {
+    position: absolute;
+    top: 7px;
+    right: 7px;
+    border: 0;
+    border-radius: 4px;
+    padding: 5px;
+    font-size: 0.7em;
+    line-height: 1.8;
+    color: #fff;
+    background-color: #777;
+    min-width: 55px;
+    text-align: center;
+}
+.highlight-copy-btn:hover {
+    background-color: #666;
+}
 </style>
 <hr>
+<h2 class="minih" id="foliensatz">Foliensatz</h2>
+<iframe src="https://drive.google.com/file/d/1mVLtFSYhC41FQ85WojjyBH3VxW6NwzQP/preview" width="736" height="552" allow="autoplay"></iframe>
+<ul class="cta-group">
+  
+  <li>
+    <a href="/workshop/rct-evaluation-in-r/r-entdecken"  class="btn btn-primary px-3 py-3">👉 R Entdecken</a>
+  </li>
+  
+  
+</ul>
+
 
           </div>
 
@@ -971,7 +1013,7 @@ h1 {color: #2a7792;}
         </div>
 
         <div class="body-footer">
-          <p>Zuletzt aktualisiert am 1. Januar 2021</p>
+          <p>Zuletzt aktualisiert am 3. Januar 2021</p>
 
           
 
