--- a/public/workshop/index.html
+++ b/public/workshop/index.html
@@ -682,7 +682,7 @@
     
     <a href="/workshop/rct-evaluation-in-r/"  class="summary-link">
       <div class="article-style">
-        Workshop
+        Workshop · 
    Willkommen!  Herzlich Willkommen im digitalen Repositorium für den Workshop &ldquo;Evaluation Randomisiert-Kontrollierter Studien mit R&rdquo;. Auf diesen Seiten finden sich alle Materialen (Foliensätze, Code-Snippets, Datensätze), die während des Workshops Verwendung finden.
       </div>
     </a>
