--- a/public/workshop/rct-evaluation-in-r/index.html
+++ b/public/workshop/rct-evaluation-in-r/index.html
@@ -1014,7 +1014,7 @@
 <hr>
 <ul>
 <li>Für organisatorische Fragen: <strong>Janika Thielecke</strong> (<a href="mailto:janika.thielecke@tum.de">janika.thielecke@tum.de</a>)</li>
-<li>Für inhaltliche Fragen: <strong>Mathias Harrer</strong> (<a href="mailto:mathias.harrer@fau.de">mathias.harrer@fau.de</a>)</li>
+<li>Für inhaltliche Fragen: <strong>Mathias Harrer</strong> (<a href="mailto:mathias.harrer@tum.de">mathias.harrer@tum.de</a>)</li>
 </ul>
 <p><br></br></p>
 <ul class="cta-group">
