--- a/public/workshop/rct-evaluation-in-r/vorbereitung/index.html
+++ b/public/workshop/rct-evaluation-in-r/vorbereitung/index.html
@@ -980,7 +980,7 @@ h1 {color: #2a7792;}
 </li>
 </ul>
 <p>Nachdem beide Programme installiert wurden, sollte kurz geprüft werden, ob RStudio &ldquo;startbereit&rdquo; ist. Dazu muss einfach RStudio geöffnet werden; wird in der Console (unten links) die heruntergeladene R Version angezeigt (zusammen mit Lizenz- und anderen Basisinformationen), kann R auf dem Computer genutzt werden.</p>
-<p>Mehr Information zur Installation von R/RStudio finden sich <a href="https://bookdown.org/MathiasHarrer/Doing_Meta_Analysis_in_R/discovering-R.html#install-R" target="_blank" rel="noopener">hier</a>.</p>
+<p>Detaillierte Informationen zur Installation von R/RStudio finden sich <a href="/Installation_R_RStudio.pdf">hier</a> und <a href="https://bookdown.org/MathiasHarrer/Doing_Meta_Analysis_in_R/discovering-R.html#install-R" target="_blank" rel="noopener">hier</a> (englisch).</p>
 <br>
 <h2 id="vorbereitung-des-analysenordners">Vorbereitung des Analysenordners</h2>
 <p>Um die Praxisbeispiele während des Workshops selbst durchlaufen zu können, sollte zuvor bereits ein <strong>Ordner</strong> mit allen wichtigen Materialen zusammengestellt werden. Dieser Ordner sollte an einem gut auffindbaren Ort abgespeichert werden, und einen aussagekräftigen Namen tragen (z.B. <code>rct-workshop</code>).</p>
