--- a/public/workshop/rct-evaluation-in-r/vorbereitung/index.html
+++ b/public/workshop/rct-evaluation-in-r/vorbereitung/index.html
@@ -1030,10 +1030,10 @@ h1 {color: #2a7792;}
 <br>
 <h2 id="bring-your-data">&ldquo;Bring Your Data&rdquo;</h2>
 <p>Der Workshop und alle seine Praxisbeispiele sind auf den o.g. Datensatz zugeschnitten. Besonders R-Anfängern möchten wir ans Herz legen, den Workshop mit diesen bereitgestellten Daten zu durchlaufen.</p>
-<p>Es besteht jedoch auch die Möglichkeit, Übungen und Praxisbeispiele mit einem eigenen RCT-Datensatz auszuprobieren. Dafür sollten jedoch Folgendes beachtet werden:</p>
+<p>Es besteht jedoch auch die Möglichkeit, Übungen und Praxisbeispiele mit einem eigenen RCT-Datensatz auszuprobieren. Dafür sollte jedoch Folgendes beachtet werden:</p>
 <ul>
 <li>
-<p><strong>Der Datensatz sollte nach den Grundsätzen von &ldquo;tidy data&rdquo; vorstrukturiert sein</strong>. Für eine Einführung in das &ldquo;tidy data&rdquo;-Konzept siehe Wickham (<a href="https://www.jstatsoft.org/article/view/v059i10" target="_blank" rel="noopener">2014</a>). Zudem sollte ein Codebook erstellt werden; diesem Codebook folgend sollten alle Variablennamen konsistent formatiert sein. Ein besonderes Augenmerk liegt dabei auf der Kodierung des Messzeitpunktes; bespielsweise sollten Messzeitpunktangaben über alle Variablen konsistent sein (z.B. <code>depression_t1</code>, <code>depression_t2</code>, <code>depression_t3</code> für Depression zu Baseline, Post-Test und Follow-up). Ein Beispiel für einen Coding Guide findet sich <a href="/data-warehouse/coding-guide/">hier</a>; der Beispieldatensatz <code>data.csv</code> ist nach diesen Richtlinien aufbereitet.</p>
+<p><strong>Der Datensatz sollte nach den Grundsätzen von &ldquo;tidy data&rdquo; vorstrukturiert sein</strong>. Für eine Einführung in das &ldquo;tidy data&rdquo;-Konzept siehe Wickham (<a href="https://www.jstatsoft.org/article/view/v059i10" target="_blank" rel="noopener">2014</a>). Zudem sollte ein Codebook erstellt werden; diesem Codebook folgend sollten alle Variablennamen konsistent formatiert sein. Ein besonderes Augenmerk liegt dabei auf der Kodierung des Messzeitpunktes; beispielsweise sollten Messzeitpunktangaben über alle Variablen konsistent sein (z.B. <code>depression_t1</code>, <code>depression_t2</code>, <code>depression_t3</code> für Depression zu Baseline, Post-Test und Follow-up). Ein Beispiel für einen Coding Guide findet sich <a href="/data-warehouse/coding-guide/">hier</a>; der Beispieldatensatz <code>data.csv</code> ist nach diesen Richtlinien aufbereitet.</p>
 </li>
 <li>
 <p><strong>Individuelles Troubleshooting ist nur eingeschränkt möglich</strong>. Verfahren wie z.B. multiple Imputation müssen flexibel auf die vorliegenden Daten adaptiert werden; eine &ldquo;one size fits all&rdquo;-Lösung existiert hierfür nicht. Dies bedeutet, dass im Workshop erarbeiteter Code sich oft nicht automatisch und ohne Abänderungen auf das eigene Datenset übertragen lässt. Während des Workshops besteht nur begrenzt die Möglichkeit, auf Fehlermeldungen, Konvergenzprobleme etc. bei &ldquo;mitgebrachten&rdquo; Daten einzugehen. Im Notfall besteht jederzeit die Möglichkeit, auf die bereitgestellten Daten &ldquo;umzusatteln&rdquo;, und sich nach dem Workshop mit der nötigen Muße dem eigenen Datensatz zu widmen.</p>
@@ -1070,7 +1070,7 @@ h1 {color: #2a7792;}
         </div>
 
         <div class="body-footer">
-          <p>Zuletzt aktualisiert am 8. Januar 2021</p>
+          <p>Zuletzt aktualisiert am 9. Januar 2021</p>
 
           
 
