--- a/public/workshop/rct-evaluation-in-r/material/index.html
+++ b/public/workshop/rct-evaluation-in-r/material/index.html
@@ -1005,6 +1005,7 @@ h1 {color: #2a7792;}
 <h2 id="daten">Daten</h2>
 <ul>
 <li><a href="data.csv"><strong><code>data.csv</code></strong></a>: Ausgewählte Daten einer randomisiert-kontrollierten Studie, mit fehlenden Werten.</li>
+<li><a href="data.xlsx"><strong><code>data.xlsx</code></strong></a>: Ausgewählte Daten einer randomisiert-kontrollierten Studie, mit fehlenden Werten (Excel-Format).</li>
 <li><a href="imp.rda"><strong><code>imp.rda</code></strong></a>: Element der Klasse <code>mids</code> mit $m$=25 (multipel) imputierten Datensätzen.</li>
 <li><a href="implist.rda"><strong><code>implist.rda</code></strong></a>: Liste der Klasse <code>mitml.list</code> mit $m$=25 (multipel) imputierten Datensätzen.</li>
 </ul>
