--- a/public/workshop/rct-evaluation-in-r/material/index.html
+++ b/public/workshop/rct-evaluation-in-r/material/index.html
@@ -1012,7 +1012,7 @@ h1 {color: #2a7792;}
 <br>
 <h2 id="slides">Slides</h2>
 <ul>
-<li>Gesammelte Foliensätze des Workshops.</li>
+<li><a href="slides.pdf"><strong>Gesammelte Foliensätze</strong></a> des Workshops.</li>
 </ul>
 
           </div>
@@ -1035,7 +1035,7 @@ h1 {color: #2a7792;}
         </div>
 
         <div class="body-footer">
-          <p>Zuletzt aktualisiert am 8. Januar 2021</p>
+          <p>Zuletzt aktualisiert am 9. Januar 2021</p>
 
           
 
