--- a/public/workshop/rct-evaluation-in-r/literatur/index.html
+++ b/public/workshop/rct-evaluation-in-r/literatur/index.html
@@ -1154,6 +1154,9 @@ Little, Roderick JA. 1988. <span>“A Test of Missing Completely at Random for M
 <div id="ref-little2019statistical" class="csl-entry">
 Little, Roderick JA, and Donald B Rubin. 2019. <em>Statistical Analysis with Missing Data</em>. Vol. 793. John Wiley &amp; Sons.
 </div>
+<div id="ref-madleydowd" class="csl-entry">
+Madley-Dowd, P., Hughes, R., Tilling, K. and Heron, J. (2019). The Proportion of Missing Data Should Not Be Used To Guide Decisions on Multiple Imputation. <em>Journal of Clinical Epidemiology, 110</em>, 63-73. <a href="https://www.sciencedirect.com/science/article/pii/S0895435618308710" target="_blank">www.sciencedirect.com/science/article/pii/S0895435618308710</a>
+</div>
 <div id="ref-mallinckrodt2004choice" class="csl-entry">
 Mallinckrodt, Craig H, John G Watkin, Geert Molenberghs, and Raymond J Carroll. 2004. <span>“Choice of the Primary Analysis in Longitudinal Clinical Trials.”</span> <em>Pharmaceutical Statistics: The Journal of Applied Statistics in the Pharmaceutical Industry</em> 3 (3): 161–69.
 </div>
