--- a/public/en/behavioral-health-technology/index.html
+++ b/public/en/behavioral-health-technology/index.html
@@ -922,11 +922,11 @@
   <div class="col-12 col-lg-8">
     <h2 id="effective-technology">Effective Technology</h2>
 <p>At the PROTECT Lab, we develop and evaluate Behavioral Health Technology interventions, with a focus on Internet and mobile (App) -based health interventions. The short-term and long-term efficacy of all interventions is evaluated extensively in randomized controlled trials.</p>
-<p>In addition, we deal with indication issues, e.g. for which affected persons, under which conditions and on the basis of which theoretical mechanisms of action the interventions are effective, and how the usage of such interventions can be increase, in particular for previously underserved target groups.</p>
+<p>In addition, we deal with indication issues, e.g. for which affected persons, under which conditions and on the basis of which theoretical mechanisms of action the interventions are effective, and how the usage of such interventions can be increased, in particular for previously underserved target groups.</p>
 <p>Further research questions relate to the cost-effectiveness of such interventions.</p>
 <p> </p>
 <h2 id="target-groups">Target Groups</h2>
-<p>The bandwith of areas covered by interventions developed and evaluated by the PROTECT Lab in cooperation with national and international expertise includes:</p>
+<p>The bandwidth of areas covered by interventions developed and evaluated by the PROTECT Lab in cooperation with national and international expertise includes:</p>
 <ul>
 <li><strong>Prevention of Depression</strong></li>
 <li><strong>Stress Management</strong></li>
